[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"
authors = ["Patryk Hegenberg"]
description = "A small dungeon crawler game to learn rust while having fun"
repository = "https://github.com/PatrykHegenberg/rusty_dungeon"

[package.metadata.wix]
upgrade-guid = "6F8D712E-21F4-4BF8-A808-F0F5AF8815F8"
path-guid = "AF98A1FB-912E-4CC6-8FCB-DE182EF0FEC1"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
